--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "42/Cursus/libft"]
 	path = 42/Cursus/libft
 	url = git@github.com:laird-ikar/libft.git
+[submodule "42/Cursus/rank01/ft_printf"]
+	path = 42/Cursus/rank01/ft_printf
+	url = git@github.com:laird-ikar/ft_printf.git
+[submodule "42/Cursus/rank01/get_next_line"]
+	path = 42/Cursus/rank01/get_next_line
+	url = git@github.com:laird-ikar/get_next_line.git
