--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,12 @@
 [submodule "42/Cursus/rank01/get_next_line"]
 	path = 42/Cursus/rank01/get_next_line
 	url = git@github.com:laird-ikar/get_next_line.git
+[submodule "42/Cursus/rank02/minitalk"]
+	path = 42/Cursus/rank02/minitalk
+	url = git@github.com:laird-ikar/minitalk.git
+[submodule "42/Cursus/rank02/push_swap"]
+	path = 42/Cursus/rank02/push_swap
+	url = git@github.com:laird-ikar/push_swap.git
+[submodule "42/Cursus/rank02/FdF"]
+	path = 42/Cursus/rank02/FdF
+	url = git@github.com:laird-ikar/FdF.git
