--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "42/Cursus/rank05/CPP Modules 05-09/CPP09"]
 	path = 42/Cursus/rank05/CPP Modules 05-09/CPP09
 	url = git@github.com:laird-ikar/CPP09.git
+[submodule "42/Cursus/rank06/ft_transcendence"]
+	path = 42/Cursus/rank06/ft_transcendence
+	url = git@github.com:laird-ikar/ft_transcendence.git
