--- a/.gitmodules
+++ b/.gitmodules
@@ -121,3 +121,6 @@
 [submodule "42/Piscine C/days/Shell-01"]
 	path = 42/Piscine C/days/Shell-01
 	url = git@github.com:laird-ikar/Shell-01.git
+[submodule "42/Piscine C/rushs/Rush-01"]
+	path = 42/Piscine C/rushs/Rush-01
+	url = git@github.com:laird-ikar/Rush-01.git
