--- a/.gitmodules
+++ b/.gitmodules
@@ -124,3 +124,6 @@
 [submodule "42/Piscine C/rushs/Rush-01"]
 	path = 42/Piscine C/rushs/Rush-01
 	url = git@github.com:laird-ikar/Rush-01.git
+[submodule "42/Piscine C/BSQ"]
+	path = 42/Piscine C/BSQ
+	url = git@github.com:laird-ikar/BSQ.git
